// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FriendItem should match snapshot (from, confirmed) 1`] = `
<MetaItem
  local={
    Object {
      "buttons": Array [
        Object {
          "handler": [MockFunction],
          "icon": "fas fa-times",
        },
      ],
      "item": Object {
        "confirmed": true,
        "date": 0,
        "from": Object {
          "id": "id-a",
          "name": "",
        },
        "hidden": Array [],
        "id": "",
        "to": Object {
          "id": "id-b",
          "name": "",
        },
      },
      "notification": <p>
        <MetaUserLink
          local={
            Object {
              "user": Object {
                "id": "id-b",
                "name": "",
              },
            }
          }
        />
         accepted your friend request.
      </p>,
    }
  }
/>
`;

exports[`FriendItem should match snapshot (from, unconfirmed) 1`] = `
<MetaItem
  local={
    Object {
      "buttons": Array [
        Object {
          "handler": [MockFunction],
          "icon": "fas fa-ban",
        },
      ],
      "item": Object {
        "confirmed": false,
        "date": 0,
        "from": Object {
          "id": "id-a",
          "name": "",
        },
        "hidden": Array [],
        "id": "",
        "to": Object {
          "id": "id-b",
          "name": "",
        },
      },
      "notification": <p>
        You sent 
        <MetaUserLink
          local={
            Object {
              "user": Object {
                "id": "id-b",
                "name": "",
              },
            }
          }
        />
         a friend request.
      </p>,
    }
  }
/>
`;

exports[`FriendItem should match snapshot (to, confirmed) 1`] = `
<MetaItem
  local={
    Object {
      "buttons": Array [
        Object {
          "handler": [MockFunction],
          "icon": "fas fa-times",
        },
      ],
      "item": Object {
        "confirmed": true,
        "date": 0,
        "from": Object {
          "id": "id-a",
          "name": "",
        },
        "hidden": Array [],
        "id": "",
        "to": Object {
          "id": "id-b",
          "name": "",
        },
      },
      "notification": <p>
        You accepted 
        <MetaUserLink
          local={
            Object {
              "user": Object {
                "id": "id-a",
                "name": "",
              },
            }
          }
        />
        's friend request.
      </p>,
    }
  }
/>
`;

exports[`FriendItem should match snapshot (to, unconfirmed) 1`] = `
<MetaItem
  local={
    Object {
      "buttons": Array [
        Object {
          "handler": [MockFunction],
          "icon": "fas fa-check",
        },
        Object {
          "handler": [MockFunction],
          "icon": "fas fa-ban",
        },
      ],
      "item": Object {
        "confirmed": false,
        "date": 0,
        "from": Object {
          "id": "id-a",
          "name": "",
        },
        "hidden": Array [],
        "id": "",
        "to": Object {
          "id": "id-b",
          "name": "",
        },
      },
      "notification": <p>
        <MetaUserLink
          local={
            Object {
              "user": Object {
                "id": "id-a",
                "name": "",
              },
            }
          }
        />
         sent you a friend request.
      </p>,
    }
  }
/>
`;
